# actual

./: .gitignore  deploy-ec2.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pitchexample.txt
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  batch_reenrich.py  entrypoint.sh  fix_stages.py  import_crunchbase.py  import_crunchbase2.py  pyproject.toml  reenrich.py
backend/acutal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 11a1ad5dbefc_admin_panel_tables.py  2648e16dcc0e_initial_schema.py  2b6d7e0b62b0_add_valuation_columns.py  a1b2c3d4e5f6_add_entity_type.py  a1b2c3d4e5f6_add_form_sources_and_data_sources_to_.py  a1b2c3d4e5f6_add_valuation_columns.py  b2c3d4e5f6a1_add_investor_role.py  b2c3d4e5f6a7_add_entity_type_to_startups.py  c3a7f1e2d4b5_add_password_hash_and_credentials_provider.py  c3d4e5f6g7h8_add_investor_faq_columns.py  c4d5e6f7g8h9_add_marketing_email_jobs.py  d4e5f6a7b8c9_enrichment_pipeline.py  d5e6f7g8h9i0_add_email_verification_columns.py  disc01_startup_discovery_schema.py  dr01_dataroom_schema.py  e5f6a7b8c9d0_add_public_stage.py  e6f7g8h9i0j1_add_email_verification_job.py  (+20 more)
backend/app/: config.py  main.py  utils.py
backend/app/api/: admin.py  (+38 more)
backend/tests/: conftest.py  test_admin.py  test_admin_assignments.py  test_admin_dimensions.py  test_admin_templates.py  test_analyst_tools.py  test_auth.py  test_auth_exchange.py  test_email_verification.py  test_expert_assignments.py  test_experts.py  test_industries.py  test_marketing_email.py  test_startups.py
(+281 files in other folders)
